feat: Cubemx changed

--- a/balance_chassis.ioc
+++ b/balance_chassis.ioc
@@ -302,6 +302,11 @@ FDCAN3.NominalTimeSeg1=4
 FDCAN3.NominalTimeSeg2=7
 FDCAN3.RxFifo0ElmtsNbr=32
 FDCAN3.TxFifoQueueElmtsNbr=16
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configTOTAL_HEAP_SIZE,FootprintOK
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;imu_task,3,512,imu_task_entry,Default,NULL,Static,imu_taskBuffer,imu_taskControlBlock;chassis_task,2,512,chassis_task_entry,Default,NULL,Static,chassis_taskBuffer,chassis_taskControlBlock
+FREERTOS.configENABLE_FPU=1
+FREERTOS.configTOTAL_HEAP_SIZE=61440
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -366,27 +371,28 @@ Mcu.CPN=STM32H723VGT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=SYS
-Mcu.IP11=TIM3
-Mcu.IP12=TIM4
-Mcu.IP13=TIM5
-Mcu.IP14=TIM6
-Mcu.IP15=TIM7
-Mcu.IP16=UART5
-Mcu.IP17=UART8
-Mcu.IP18=USART1
-Mcu.IP19=USART2
+Mcu.IP10=SPI2
+Mcu.IP11=SYS
+Mcu.IP12=TIM3
+Mcu.IP13=TIM4
+Mcu.IP14=TIM5
+Mcu.IP15=TIM6
+Mcu.IP16=TIM7
+Mcu.IP17=UART5
+Mcu.IP18=UART8
+Mcu.IP19=USART1
 Mcu.IP2=DMA
-Mcu.IP20=USART3
-Mcu.IP21=USART10
+Mcu.IP20=USART2
+Mcu.IP21=USART3
+Mcu.IP22=USART10
 Mcu.IP3=FDCAN1
 Mcu.IP4=FDCAN2
 Mcu.IP5=FDCAN3
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SPI2
-Mcu.IPNb=22
+Mcu.IP6=FREERTOS
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=23
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -418,69 +424,75 @@ Mcu.Pin31=PB5
 Mcu.Pin32=PB6
 Mcu.Pin33=PE0
 Mcu.Pin34=PE1
-Mcu.Pin35=VP_SYS_VS_tim1
-Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin36=VP_SYS_VS_tim1
+Mcu.Pin37=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin40=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin41=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin42=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PC3_C
 Mcu.Pin9=PA0
-Mcu.PinsNb=41
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=43
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32H723VGTx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream1_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
-NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.FDCAN2_IT1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.FDCAN3_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN3_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:10\:0\:true\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:10\:0\:true\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN2_IT1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN3_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SPI2_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI2_IRQn=true\:10\:0\:true\:false\:true\:true\:false\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UART5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UART8_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UART8_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Speed
 PA0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0.Locked=true
@@ -623,10 +635,10 @@ ProjectManager.DeviceId=STM32H723VGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x400
+ProjectManager.HeapSize=0x1000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
+ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
@@ -635,7 +647,7 @@ ProjectManager.ProjectFileName=balance_chassis.ioc
 ProjectManager.ProjectName=balance_chassis
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=FDCAN,I2C,SPI,UART,USART
-ProjectManager.StackSize=0x800
+ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
@@ -739,6 +751,10 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
@@ -790,8 +806,12 @@ USART3.OverSampling=UART_OVERSAMPLING_8
 USART3.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART3.VirtualMode-Hardware\ Flow\ Control\ (RS485)=VM_ASYNC
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
@@ -803,3 +823,4 @@ VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
+rtos.0.ip=FREERTOS
