--- a/balance_chassis.ioc
+++ b/balance_chassis.ioc
@@ -2,27 +2,23 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_PRIV_RO
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_FULL_ACCESS
-CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings=0x08000000
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings=0x20000000
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region2_Settings=0x24000000
 CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.CPU_ICache=Disabled
-CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_ENABLE
+CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region0_Settings=__NULL
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_ENABLE
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_ENABLE
-CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control,Enable-Cortex_Memory_Protection_Unit_Region0_Settings,Enable-Cortex_Memory_Protection_Unit_Region1_Settings,Number-Cortex_Memory_Protection_Unit_Region1_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings,Size-Cortex_Memory_Protection_Unit_Region0_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings,IsCacheable-Cortex_Memory_Protection_Unit_Region0_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings,Size-Cortex_Memory_Protection_Unit_Region1_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings,TypeExtField-Cortex_Memory_Protection_Unit_Region1_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings,IsCacheable-Cortex_Memory_Protection_Unit_Region1_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings,Enable-Cortex_Memory_Protection_Unit_Region2_Settings,Number-Cortex_Memory_Protection_Unit_Region2_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region2_Settings,Size-Cortex_Memory_Protection_Unit_Region2_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region2_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region2_Settings,TypeExtField-Cortex_Memory_Protection_Unit_Region2_Settings
+CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control,Enable-Cortex_Memory_Protection_Unit_Region0_Settings,Enable-Cortex_Memory_Protection_Unit_Region1_Settings,Number-Cortex_Memory_Protection_Unit_Region1_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings,Size-Cortex_Memory_Protection_Unit_Region1_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings,TypeExtField-Cortex_Memory_Protection_Unit_Region1_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings,IsCacheable-Cortex_Memory_Protection_Unit_Region1_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings,Enable-Cortex_Memory_Protection_Unit_Region2_Settings,Number-Cortex_Memory_Protection_Unit_Region2_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region2_Settings,Size-Cortex_Memory_Protection_Unit_Region2_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region2_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region2_Settings,TypeExtField-Cortex_Memory_Protection_Unit_Region2_Settings
 CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_BUFFERABLE
-CORTEX_M7.IsCacheable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_ACCESS_CACHEABLE
 CORTEX_M7.IsCacheable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_CACHEABLE
 CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_SHAREABLE
 CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_ACCESS_SHAREABLE
-CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
+CORTEX_M7.MPU_Control=__NULL
 CORTEX_M7.Number-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_NUMBER1
 CORTEX_M7.Number-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_NUMBER2
-CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_1MB
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_128KB
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_SIZE_128KB
 CORTEX_M7.TypeExtField-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_TEX_LEVEL1
@@ -303,10 +299,15 @@ FDCAN3.NominalTimeSeg2=7
 FDCAN3.RxFifo0ElmtsNbr=32
 FDCAN3.TxFifoQueueElmtsNbr=16
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configTOTAL_HEAP_SIZE,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;imu_task,3,512,imu_task_entry,Default,NULL,Static,imu_taskBuffer,imu_taskControlBlock;chassis_task,2,512,chassis_task_entry,Default,NULL,Static,chassis_taskBuffer,chassis_taskControlBlock
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configTOTAL_HEAP_SIZE,FootprintOK,configUSE_APPLICATION_TASK_TAG,configRECORD_STACK_HIGH_ADDRESS,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configUSE_CO_ROUTINES
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;imu_task,40,256,imu_task_entry,Default,NULL,Static,imu_taskBuffer,imu_taskControlBlock;chassis_task,40,512,chassis_task_entry,Default,NULL,Static,chassis_taskBuffer,chassis_taskControlBlock;remote_task,24,256,remote_task_entry,Default,NULL,Static,remote_taskBuffer,remote_taskControlBlock
 FREERTOS.configENABLE_FPU=1
+FREERTOS.configGENERATE_RUN_TIME_STATS=1
+FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
 FREERTOS.configTOTAL_HEAP_SIZE=61440
+FREERTOS.configUSE_APPLICATION_TASK_TAG=1
+FREERTOS.configUSE_CO_ROUTINES=1
+FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -366,25 +367,26 @@ MMTAppReg6.MEMORYMAP.RootBootRegion=true
 MMTAppReg6.MEMORYMAP.Size=1048576
 MMTAppReg6.MEMORYMAP.StartAddress=0x08000000
 MMTAppRegionsCount=6
-MMTConfigApplied=true
+MMTConfigApplied=false
 Mcu.CPN=STM32H723VGT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
 Mcu.IP10=SPI2
 Mcu.IP11=SYS
-Mcu.IP12=TIM3
-Mcu.IP13=TIM4
-Mcu.IP14=TIM5
-Mcu.IP15=TIM6
-Mcu.IP16=TIM7
-Mcu.IP17=UART5
-Mcu.IP18=UART8
-Mcu.IP19=USART1
+Mcu.IP12=TIM2
+Mcu.IP13=TIM3
+Mcu.IP14=TIM4
+Mcu.IP15=TIM5
+Mcu.IP16=TIM6
+Mcu.IP17=TIM7
+Mcu.IP18=UART5
+Mcu.IP19=UART8
 Mcu.IP2=DMA
-Mcu.IP20=USART2
-Mcu.IP21=USART3
-Mcu.IP22=USART10
+Mcu.IP20=USART1
+Mcu.IP21=USART2
+Mcu.IP22=USART3
+Mcu.IP23=USART10
 Mcu.IP3=FDCAN1
 Mcu.IP4=FDCAN2
 Mcu.IP5=FDCAN3
@@ -392,7 +394,7 @@ Mcu.IP6=FREERTOS
 Mcu.IP7=MEMORYMAP
 Mcu.IP8=NVIC
 Mcu.IP9=RCC
-Mcu.IPNb=23
+Mcu.IPNb=24
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -424,21 +426,22 @@ Mcu.Pin31=PB5
 Mcu.Pin32=PB6
 Mcu.Pin33=PE0
 Mcu.Pin34=PE1
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin36=VP_SYS_VS_tim1
-Mcu.Pin37=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin41=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin42=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin40=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin42=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin43=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PC3_C
 Mcu.Pin9=PA0
-Mcu.PinsNb=43
+Mcu.PinsNb=44
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -755,6 +758,9 @@ STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
+TIM2.CounterMode=TIM_COUNTERMODE_UP
+TIM2.IPParameters=Prescaler,CounterMode
+TIM2.Prescaler=275-1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
@@ -778,7 +784,7 @@ UART5.IPParameters=BaudRate,Parity,OverrunDisableParam,DMADisableonRxErrorParam,
 UART5.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
 UART5.Parity=PARITY_EVEN
 UART5.WordLength=WORDLENGTH_9B
-UART8.BaudRate=4800000
+UART8.BaudRate=4000000
 UART8.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_DISABLEONRXERROR
 UART8.IPParameters=BaudRate,OverSampling,OverrunDisableParam,DMADisableonRxErrorParam
 UART8.OverSampling=UART_OVERSAMPLING_8
@@ -806,14 +812,16 @@ USART3.OverSampling=UART_OVERSAMPLING_8
 USART3.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART3.VirtualMode-Hardware\ Flow\ Control\ (RS485)=VM_ASYNC
-VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
-VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
