feat: 实现站立和前进后退

--- a/balance_chassis.ioc
+++ b/balance_chassis.ioc
@@ -299,7 +299,8 @@ FDCAN3.NominalTimeSeg2=7
 FDCAN3.RxFifo0ElmtsNbr=32
 FDCAN3.TxFifoQueueElmtsNbr=16
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configTOTAL_HEAP_SIZE,FootprintOK,configUSE_APPLICATION_TASK_TAG,configRECORD_STACK_HIGH_ADDRESS,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configUSE_CO_ROUTINES
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configTOTAL_HEAP_SIZE,FootprintOK,configUSE_APPLICATION_TASK_TAG,configRECORD_STACK_HIGH_ADDRESS,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configUSE_CO_ROUTINES,configUSE_TASK_NOTIFICATIONS,Queues01
+FREERTOS.Queues01=imu_data,16,uint16_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;imu_task,40,256,imu_task_entry,Default,NULL,Static,imu_taskBuffer,imu_taskControlBlock;chassis_task,40,512,chassis_task_entry,Default,NULL,Static,chassis_taskBuffer,chassis_taskControlBlock;remote_task,24,256,remote_task_entry,Default,NULL,Static,remote_taskBuffer,remote_taskControlBlock
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
@@ -308,6 +309,7 @@ FREERTOS.configTOTAL_HEAP_SIZE=61440
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
 FREERTOS.configUSE_CO_ROUTINES=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
+FREERTOS.configUSE_TASK_NOTIFICATIONS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
